--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Spring-security
+#spring.datasource.url=jdbc:mysql://localhost:3306/security
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
